--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,7 @@
 
   <div>
     <form action="/stars/new" method="post">
-      <p>
-        <input type="text" name="starsName" placeholder="Podaj nazwę gwiazdy" />
-      </p>
+      <p><input type="text" name="starsName" placeholder="Podaj nazwę gwiazdy" /></p>
       <p><input type="text" name="starsType" placeholder="Jaki to typ?" /></p>
       <p><button type="submit">Dodaj</button></p>
     </form>
