--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -30,6 +31,7 @@
           <th>ID</th>
           <th>Star Name</th>
           <th>Star Type</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -47,13 +49,31 @@
           const idCell = row.insertCell();
           const nameCell = row.insertCell();
           const typeCell = row.insertCell();
+          const actionCell = row.insertCell();
           idCell.innerHTML = item._id;
           nameCell.innerHTML = item.name;
           typeCell.innerHTML = item.type;
+          actionCell.innerHTML = "<button onclick=" + "deleteStar(event,'" + item._id + "')" + ">Delete Star</button>";
         });
       })
       .catch(error => console.error(error));
   </script>
+
+  <script>
+    async function deleteStar(event, id) {
+      event.preventDefault();
+
+      try {
+        const response = await axios.delete(`/stars/delete/${id}`);
+        console.log(response.data.message);
+
+        location.reload();
+      } catch (error) {
+        console.error(error);
+      }
+    }
+  </script>
+
 </body>
 
 </html>
