--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/js/scripts.js"></script>
 </head>
 
 <body>
@@ -16,62 +17,27 @@
     <%= title %>
   </h1>
 
-  <div>
-    <form action="/stars/new" method="post">
-      <p><input type="text" name="starsName" placeholder="Podaj nazwę gwiazdy" /></p>
-      <p><input type="text" name="starsType" placeholder="Jaki to typ?" /></p>
-      <p><button type="submit">Dodaj</button></p>
-    </form>
-  </div>
+  <form action="/stars/new" method="post">
+    <p><input type="text" name="starsName" placeholder="Podaj nazwę gwiazdy" /></p>
+    <p><input type="text" name="starsType" placeholder="Jaki to typ?" /></p>
+    <p><button type="submit">Dodaj</button></p>
+  </form>
 
-  <div>
-    <table class="table table-striped table-bordered table-hover" id="data-table">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Star Name</th>
-          <th>Star Type</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-  </div>
+  <table class="table table-striped table-bordered table-hover" id="data-table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Star Name</th>
+        <th>Star Type</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 
   <script>
-    fetch('/stars/get')
-      .then(response => response.json())
-      .then(data => {
-        const tableBody = document.querySelector('#data-table tbody');
-        data.forEach(item => {
-          const row = tableBody.insertRow();
-          const idCell = row.insertCell();
-          const nameCell = row.insertCell();
-          const typeCell = row.insertCell();
-          const actionCell = row.insertCell();
-          idCell.innerHTML = item._id;
-          nameCell.innerHTML = item.name;
-          typeCell.innerHTML = item.type;
-          actionCell.innerHTML = "<button onclick=" + "deleteStar(event,'" + item._id + "')" + ">Delete Star</button>";
-        });
-      })
-      .catch(error => console.error(error));
-  </script>
-
-  <script>
-    async function deleteStar(event, id) {
-      event.preventDefault();
-
-      try {
-        const response = await axios.delete(`/stars/delete/${id}`);
-        console.log(response.data.message);
-
-        location.reload();
-      } catch (error) {
-        console.error(error);
-      }
-    }
+    populateTable();
   </script>
 
 </body>
