--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -43,12 +44,30 @@
             <form action="/stars/<%= star._id %>?_method=DELETE" method="POST">
               <button type="submit">Delete</button>
             </form>
+            <button type="button" onclick="showEditForm('<%= star._id %>')">Edit</button>
           </td>
         </tr>
         <% }); %>
     </tbody>
   </table>
 
-</body>
+  <% stars.forEach(star=> { %>
+    <form id="edit-form-<%= star._id %>" action="/stars/<%= star._id %>/edit" method="POST" style="display: none;">
+      <p><input type="text" name="starsName" value="<%= star.name %>" placeholder="Podaj nazwę gwiazdy" /></p>
+      <p><input type="text" name="starsType" value="<%= star.type %>" placeholder="Jaki to typ?" /></p>
+      <button type="submit">Save</button>
+    </form>
+    <% }); %>
 
+      <script>
+        function showEditForm(id) {
+          var form = document.getElementById('edit-form-' + id);
+          if (form.style.display === "none") {
+            form.style.display = "block";
+          } else {
+            form.style.display = "none";
+          }
+        }
+      </script>
+</body>
 </html>
