--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+form {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 20px;
+}
+
+#edit-form {
+  float: right;
+}
