--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="/scripts.js"></script>
 </head>
 
 <body>
@@ -17,11 +18,24 @@
     <%= title %>
   </h1>
 
-  <form action="/stars/new" method="post">
-    <p><input type="text" name="starsName" placeholder="Podaj nazwę gwiazdy" /></p>
-    <p><input type="text" name="starsType" placeholder="Jaki to typ?" /></p>
-    <p><button type="submit">Dodaj</button></p>
-  </form>
+  <div class="row">
+    <div class="col-md-8">
+      <form action="/stars/new" method="post">
+        <p><input type="text" name="starsName" placeholder="Podaj nazwę gwiazdy" /></p>
+        <p><input type="text" name="starsType" placeholder="Jaki to typ?" /></p>
+        <p><button type="submit">Dodaj</button></p>
+      </form>
+    </div>
+    <div class="col-md-4">
+      <% stars.forEach(star=> { %>
+        <form id="edit-form-<%= star._id %>" action="/stars/<%= star._id %>/edit" method="POST" style="display: none;">
+          <p><input type="text" name="starsName" value="<%= star.name %>" placeholder="Podaj nazwę gwiazdy" /></p>
+          <p><input type="text" name="starsType" value="<%= star.type %>" placeholder="Jaki to typ?" /></p>
+          <button type="submit">Save</button>
+        </form>
+        <% }); %>
+    </div>
+  </div>
 
   <table class="table table-striped table-bordered table-hover" id="data-table">
     <thead>
@@ -51,23 +65,6 @@
     </tbody>
   </table>
 
-  <% stars.forEach(star=> { %>
-    <form id="edit-form-<%= star._id %>" action="/stars/<%= star._id %>/edit" method="POST" style="display: none;">
-      <p><input type="text" name="starsName" value="<%= star.name %>" placeholder="Podaj nazwę gwiazdy" /></p>
-      <p><input type="text" name="starsType" value="<%= star.type %>" placeholder="Jaki to typ?" /></p>
-      <button type="submit">Save</button>
-    </form>
-    <% }); %>
-
-      <script>
-        function showEditForm(id) {
-          var form = document.getElementById('edit-form-' + id);
-          if (form.style.display === "none") {
-            form.style.display = "block";
-          } else {
-            form.style.display = "none";
-          }
-        }
-      </script>
 </body>
+
 </html>
