--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-  <title>
-    <%= title %>
-  </title>
+  <title><%= title %></title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -14,9 +12,14 @@
 </head>
 
 <body>
-  <h1>
-    <%= title %>
-  </h1>
+  <nav class="navbar">
+    <h3><%= title %></h3>
+    <ul>
+      <li><a href="#">Link1</a></li>
+      <li><a href="#">Link2</a></li>
+      <li><a href="#">Link3</a></li>
+    </ul>
+  </nav>
 
   <div class="row">
     <div class="col-md-8">
