--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,21 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-color: #000 !important;
+  overflow: hidden;
 }
 
-a {
-  color: #00B7FF;
+table th{
+  color: #fff;
+}
+
+table td{
+  color: #fff;
+}
+
+.star {
+  position: absolute;
 }
 
 form {
