--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,18 +2,22 @@
 <html>
 
 <head>
-  <title><%= title %></title>
+  <title>
+    <%= title %>
+  </title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/scripts.js"></script>
+  <script src="/scripts/showEditForm.js"></script>
 </head>
 
 <body>
   <nav class="navbar">
-    <h3><%= title %></h3>
+    <h3>
+      <%= title %>
+    </h3>
     <ul>
       <li><a href="#">Link1</a></li>
       <li><a href="#">Link2</a></li>
@@ -40,7 +44,7 @@
     </div>
   </div>
 
-  <table class="table table-striped table-bordered table-hover" id="data-table">
+  <table class="table table-bordered" id="data-table">
     <thead>
       <tr>
         <th>Name</th>
@@ -68,6 +72,8 @@
     </tbody>
   </table>
 
+  <input type="hidden" id="num-stars">
+  <script src="/scripts/addStars.js"></script>
 </body>
 
 </html>
