--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,27 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   height: 100vh;
   background-color: #000 !important;
   overflow: hidden;
+} */
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: black;
 }
+
+#container {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: black;
+}
+
 
 label{
   color: #fff;
@@ -40,7 +57,6 @@ form {
   align-items: center;
   height: 50px;
   padding: 0 20px;
-  margin-bottom: 20px;
 }
 
 .navbar h3 {
