--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -6,6 +7,7 @@ html, body {
 }
 
 #container {
+  position: relative;
   width: 100%;
   height: 100%;
   background-position: center;
@@ -14,15 +16,29 @@ html, body {
   background-color: black;
 }
 
-label{
+.cloud {
+  position: absolute;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.star {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  z-index: 2;
+}
+
+label {
   color: #fff;
 }
 
-table th{
+table th {
   color: #fff;
 }
 
-table td{
+table td {
   color: #fff;
 }
 
@@ -51,6 +67,10 @@ form {
 }
 
 .navbar h3 {
+  margin: 0 10px;
+}
+
+.navbar label {
   margin: 0 10px;
 }
 
