--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,20 +14,43 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-color: black;
+  z-index: 1;
+}
+
+#fog-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  object-fit: cover;
+  opacity: 0.5;
+}
+
+.navbar {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  padding: 0 20px;
+  z-index: 3;
 }
 
 .cloud {
   position: absolute;
   background-size: contain;
   background-repeat: no-repeat;
-  z-index: 1;
+  z-index: 3;
 }
 
 .star {
   position: absolute;
   width: 50px;
   height: 50px;
-  z-index: 2;
+  z-index: 4;
 }
 
 .glowing {
@@ -61,15 +84,7 @@ form {
   float: right;
 }
 
-.navbar {
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 50px;
-  padding: 0 20px;
-}
+
 
 .navbar h3 {
   margin: 0 10px;
