--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+
   <nav class="navbar">
     <h3>
       <%= title %>
@@ -23,6 +25,8 @@
     <input type="range" id="moon-phase" min="0" max="29" value="15">
     <label for="cloudiness">Cloudiness:</label>
     <input type="range" id="cloudiness" min="0" max="10" value="5">
+    <label for="fog">Fog:</label>
+    <input type="range" id="fog-slider" min="0" max="1" value="0">
     <div id="clouds"></div>
     <ul>
       <li><a href="#">Link1</a></li>
@@ -30,8 +34,9 @@
       <li><a href="#">Link3</a></li>
     </ul>
   </nav>
-  <div id="container"></div>
 
+  <div id="container"></div>
+  <video id="fog-video" src="/images/fog/fog-video.mp4" autoplay loop muted></video>
   <div class="row">
     <div class="col-md-8">
       <form action="/stars/new" method="post">
@@ -92,6 +97,7 @@
   </table>
 
   <script src="/scripts/moonPhases.js"></script>
+  <script src="/scripts/addFog.js"></script>
   <script src="/scripts/addClouds.js"></script>
   <script src="/scripts/addStars.js"></script>
 </body>
