--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,17 @@ body {
   opacity: 0.5;
 }
 
+#rain-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  object-fit: cover;
+  opacity: 0.5;
+}
+
 .navbar {
   background-color: #333;
   color: #fff;
