--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
     <label for="moon-phase">Moon Phase:</label>
     <input type="range" id="moon-phase" min="0" max="29" value="15">
     <label for="cloudiness">Cloudiness:</label>
-    <input type="range" id="cloudiness" min="0" max="10" value="5">
+    <input type="range" id="cloudiness-slider" min="0" max="10" value="5">
     <div id="clouds"></div>
     <label for="fog">Fog:</label>
     <input type="range" id="fog-slider" min="0" max="1" value="0">
