--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,9 +65,9 @@ body {
   z-index: 4;
 }
 
-.glowing {
-  box-shadow: 0px 0px 40px 20px yellow;
-  border-radius: 100%;
+.glow {
+  box-shadow: 0 0 20px rgba(255, 255, 0, 0.5);
+  border-radius: 50%;
 }
 
 label {
