--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,6 +41,7 @@ body {
 }
 
 .navbar {
+  width: 100%;
   background-color: #333;
   color: #fff;
   display: flex;
@@ -66,7 +67,7 @@ body {
 }
 
 .glow {
-  box-shadow: 0 0 20px rgba(255, 255, 0, 0.5);
+  box-shadow: 0 0 80px rgb(238, 255, 0);
   border-radius: 50%;
 }
 
@@ -74,7 +75,7 @@ label {
   color: #fff;
 }
 
-table{
+table {
   background-color: black;
 }
 
@@ -94,6 +95,7 @@ form {
   display: inline-block;
   vertical-align: top;
   margin-right: 20px;
+  z-index: 4;
 }
 
 #edit-form {
