--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,8 +67,8 @@ body {
 }
 
 .glow {
-  box-shadow: 0 0 80px rgb(238, 255, 0);
-  border-radius: 50%;
+  position: relative;
+  filter: drop-shadow(0px 0px 20px hsl(64, 100%, 50%));
 }
 
 label {
