--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,13 @@ body {
   z-index: 4;
 }
 
+.constellation {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  z-index: 4;
+}
+
 .glow {
   position: relative;
   filter: drop-shadow(0px 0px 20px hsl(64, 100%, 50%));
